# HW--3

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
hw3_tests/: CMakeLists.txt
hw3_tests/basic_tests/: CMakeLists.txt
hw3_tests/main_tests/: CMakeLists.txt  main_check.cpp
src/: CMakeLists.txt  triangle.cpp  triangle.h  triangle_interface.h
